Add files and updated index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 
 <html>
   <head>
-    <title>YOUR TITLE HERE</title>
+    <title>Genoa</title>
+    <style></style>
   </head>
   <body>
-    <!-- YOUR CONTENT HERE -->
+    <h1>The City of Genoa</h1>
+    <h3 class="subtitle">The Center of Mediterranean Trade</h3>
   </body>
 </html>
