--- a/page2.html
+++ b/page2.html
@@ -2,11 +2,11 @@
 
 <html>
   <head>
-    <title></title>
+    <title>Page 2</title>
     <style></style>
   </head>
   <body>
-    <h1></h1>
+    <h1>Hi</h1>
     <h3></h3>
   </body>
 </html>
