Added TOC, and renamed files

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 
 <html>
   <head>
-    <title>Genoa</title>
+    <title>Penguins</title>
     <style></style>
   </head>
   <body>
-    <h1>The City of Genoa</h1>
-    <h3 class="subtitle">The Center of Mediterranean Trade</h3>
+    <h1>The Immaculate Irreproachable Aptenodytes Forsteri</h1>
+    <h3 class="subtitle">It's practically impossible to look at a penguin and feel angry.</h3>
+    <h3>Table of Contents</h3>
+    <h4>Biology</h4>
+    <h4>Behavior</h4>
+    <h4>Human Interaction</h4>
+    <h4>Other Sources</h4>
   </body>
 </html>
