Links added to index.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <h1>The Immaculate Irreproachable Aptenodytes Forsteri</h1>
-    <h3 class="subtitle">It's practically impossible to look at a penguin and feel angry.</h3>
+    <h3 class="subtitle">"It's practically impossible to look at a penguin and feel angry."</h3>
     <h3>Table of Contents</h3>
     <a href="./biology.html"><h4>Biology</h4></a>
-    <h4>Behavior</h4>
-    <h4>Human Interaction</h4>
-    <h4>Other Sources</h4>
+    <a href="./behavior.html"><h4>Behavior</h4></a>
+    <a href="./humans.html"><h4>Human Interaction</h4></a>
+    <a href="./other.html"><h4>Biology</h4></a>
   </body>
 </html>
