--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
   <head>
     <title>Penguins</title>
     <style></style>
+    <link rel="stylesheet" type="text/css" href="headstyle.css">
   </head>
   <body>
-    <h1>The Immaculate Irreproachable Aptenodytes Forsteri</h1>
-    <h3 class="subtitle">"It's practically impossible to look at a penguin and feel angry."</h3>
-    <h3>Table of Contents</h3>
-    <a href="./biology.html"><h4>Biology</h4></a>
-    <a href="./behavior.html"><h4>Behavior</h4></a>
-    <a href="./humans.html"><h4>Human Interaction</h4></a>
-    <a href="./other.html"><h4>Biology</h4></a>
+    <div class="header">
+      <h1>The Immaculate Aptenodytes Forsteri</h1>
+      <h3 class="subtitle">"It's practically impossible to look at a penguin and feel angry." - Joe Moore</h3>
+      <div class="headerimg">
+        <img src="./images/emperor-penguin-clipart.png">
+      </div>
+    </div>
+    <div class="TOC">
+      <h3>Table of Contents</h3>
+      <a href="./biology.html" class="TOCitems"><h4>Biology</h4></a>
+      <a href="./behavior.html" class="TOCitems"><h4>Behavior</h4></a>
+      <a href="./humans.html" class="TOCitems"><h4>Human Interaction</h4></a>
+      <a href="./other.html" class="TOCitems"><h4>Biology</h4></a>
+    </div>
+    <h4>Overview<h4>
+    <p>
   </body>
 </html>
