--- a/index.html
+++ b/index.html
@@ -8,18 +8,28 @@
   </head>
   <body>
     <div class="header">
-      <h1>The Immaculate Aptenodytes Forsteri</h1>
-      <h3 class="subtitle">"It's practically impossible to look at a penguin and feel angry." - Joe Moore</h3>
+      <div style="width: 60%; margin: 0;">
+        <h1>The Immaculate Aptenodytes Forsteri</h1>
+        <h3 class="subtitle">"It's practically impossible to look at a penguin and feel angry." <br> - Joe Moore</h3>
+      </div>
       <div class="headerimg">
-        <img src="./images/emperor-penguin-clipart.png">
+        <img src="./images/emperor-penguin-clipart.png" height="100px">
+        <img src="./images/emperor-penguin-clipart.png" height="100px">
+        <img src="./images/emperor-penguin-clipart.png" height="100px">
       </div>
     </div>
     <div class="TOC">
-      <h3>Table of Contents</h3>
-      <a href="./biology.html" class="TOCitems"><h4>Biology</h4></a>
-      <a href="./behavior.html" class="TOCitems"><h4>Behavior</h4></a>
-      <a href="./humans.html" class="TOCitems"><h4>Human Interaction</h4></a>
-      <a href="./other.html" class="TOCitems"><h4>Biology</h4></a>
+      <table style="width:100%;">
+        <tbody>
+          <tr>
+            <td class="TOCitem"><a href="./index.html"><h4 style="color:black; text-decoration: none;">Home</h4></a></td>
+            <td class="TOCitem"><a href="./biology.html"><h4 style="color:black; text-decoration: none;">Biology</h4></a></td>
+            <td class="TOCitem"><a href="./humans.html"><h4 style="color:black; text-decoration: none;";>Human Interaction</h4></a></td>
+            <td class="TOCitem"><a href="./behavior.html"><h4 style="color:black; text-decoration: none;";>Behavior</h4></a></td>
+            <td class="TOCitem"><a href="./other.html"><h4 style="color:black; text-decoration: none;";>Biology</h4></a></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     <h4>Overview<h4>
     <p>
