--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 
 <html>
+
   <head>
     <title>Penguins</title>
     <style></style>
-    <link rel="stylesheet" type="text/css" href="headstyle.css">
+    <link rel="stylesheet" type="text/css" href="./css/headstyle.css">
+    <link rel="stylesheet" type="text/css" href="./css/bodystyle.css">
+    <link rel="stylesheet" type="text/css" href="./css/footstyle.css">
   </head>
+
   <body>
+
     <div class="header">
       <div style="width: 60%; margin: 0;">
         <h1>The Immaculate Aptenodytes Forsteri</h1>
@@ -18,20 +23,82 @@
         <img src="./images/emperor-penguin-clipart.png" height="100px">
       </div>
     </div>
+
     <div class="TOC">
       <table style="width:100%;">
         <tbody>
           <tr>
-            <td class="TOCitem"><a href="./index.html"><h4 style="color:black; text-decoration: none;">Home</h4></a></td>
+            <td class="TOCitem"><a href="./index.html"><h4 style="color:white; text-decoration: none;">Home</h4></a></td>
+
             <td class="TOCitem"><a href="./biology.html"><h4 style="color:black; text-decoration: none;">Biology</h4></a></td>
+
             <td class="TOCitem"><a href="./humans.html"><h4 style="color:black; text-decoration: none;";>Human Interaction</h4></a></td>
+
             <td class="TOCitem"><a href="./behavior.html"><h4 style="color:black; text-decoration: none;";>Behavior</h4></a></td>
+
             <td class="TOCitem"><a href="./other.html"><h4 style="color:black; text-decoration: none;";>Biology</h4></a></td>
           </tr>
         </tbody>
       </table>
     </div>
-    <h4>Overview<h4>
-    <p>
+
+    <div class="mainbody">
+      <h2 class="SectionTitle" style="padding-top:70px;">Overview</h2>
+      <div style="display: flex;">
+        <div class="infopara" style="width: 60%; float: left;">
+          <p>The <em>Aptenodytes Forsteri</em>, commonly known as the Emperor Penguin, is the largest of all penguin species and lives solely in Antarctica. The sides of the creature are black, along with the back and the head. This sharply contrasts from the white belly and yellow neck that they have. Despite having wings, it is flightless, but can swim extremely well in the frigid antarctic waters. Its diet mostly consists of fish and other small sea creatures it can find, and is the only penguin species to breed during the antarctic winter.</p>
+        </div>
+        <div class="bodyother" style="float: right;">
+          <img src="./images/emperorpenguins.jpg" height="300px">
+          <img src="./images/emperorpenguins2.jpg" height="300px">
+        </div>
+      </div>
+      <hr/>
+      <h2 class="SectionTitle">Taxonomy and Nomenclature</h2>
+      <div style="display: flex">
+        <div class="infopara" style="width: 60%; float: left;">
+          <p>It is one of only two surviving species in the genus <em>Aptenodytes</em>, along with the slightly smaller King Penguin, <em>Aptenodytes Patagonicus</em>. Fossils have been found of Ridgen's Penguin, <em>Aptenodytes Ridgeni</em> in New Zealand, however this species is now extinct.</p>
+          <p>The Emperor Penguin was given its colloquial name due to its immense size, and being the largest species of penguin in the world. Its scientific genus name came when in 1844, zoologist George Gray created the name from the greek word ἀ-πτηνο-δύτης (a-ptaeno-dytes), meaning "diver without wings". Its species name came from German explorer who accompanied Captain Cook on his voyage, Johann Forster.</p>
+        </div>
+        <div class="bodyother" style="float: right; padding-bottom:10px;">
+          <p>Scientific Classification</p>
+          <ul>
+            <li>Domain: <em>Eukarya</em></li>
+            <li>Kingdom: <em>Animalia</em></li>
+            <li>Phylum: <em>Chordata</em></li>
+            <li>Class: <em>Aves</em></li>
+            <li>Order: <em>Sphenisciformes</em></li>
+            <li>Family: <em>Spheniscidae</em></li>
+            <li>Genus: <em>Aptenodytes</em></li>
+            <li>Species: <em>A. Forsteri</em></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="foot">
+      <div class="foottop">
+        <div class="footinfo">
+          <div>
+            <p class="footstatement"><em>This aim of this webpage is to provide unbiased information to readers</em></p>
+            <p class="foottext">The information on this site is not guarenteed to be correct nor will the sources that were used to make this site be provided. This website was created for a school project and should not be categorized as a professional website.</p>
+          </div>
+          <div class="footcontact">
+            <p>Contact Information</p>
+            <ul>
+              <li>John Doe</li>
+              <li>(123) 456 - 7890</li>
+              <li>info@example.com</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footbottom">
+        <p style="float:left; margin-right:45%">Copyright 2018</p>
+        <p style="float:right;">AIT - UCVTS | APCSP</p>
+      </div>
+    </div>
+
   </body>
+
 </html>
