modified info on biology.html and added images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <title>Penguins</title>
+    <title>Emperor Penguins</title>
     <style></style>
     <link rel="stylesheet" type="text/css" href="./css/headstyle.css">
     <link rel="stylesheet" type="text/css" href="./css/bodystyle.css">
