--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
             <td class="TOCitem"><a href="./biology.html"><h4 style="color:black; text-decoration: none;">Biology</h4></a></td>
 
-            <td class="TOCitem"><a href="./humans.html"><h4 style="color:black; text-decoration: none;";>Human Interaction</h4></a></td>
+            <td class="TOCitem"><a href="./humans.html"><h4 style="color:black; text-decoration: none;">Human Interaction</h4></a></td>
 
-            <td class="TOCitem"><a href="./behavior.html"><h4 style="color:black; text-decoration: none;";>Behavior</h4></a></td>
+            <td class="TOCitem"><a href="./behavior.html"><h4 style="color:black; text-decoration: none;">Behavior</h4></a></td>
 
-            <td class="TOCitem"><a href="./other.html"><h4 style="color:black; text-decoration: none;";>Biology</h4></a></td>
+            <td class="TOCitem"><a href="./other.html"><h4 style="color:black; text-decoration: none;">Other</h4></a></td>
           </tr>
         </tbody>
       </table>
@@ -46,11 +46,11 @@
       <h2 class="SectionTitle" style="padding-top:70px;">Overview</h2>
       <div style="display: flex;">
         <div class="infopara" style="width: 60%; float: left;">
-          <p>The <em>Aptenodytes Forsteri</em>, commonly known as the Emperor Penguin, is the largest of all penguin species and lives solely in Antarctica. The sides of the creature are black, along with the back and the head. This sharply contrasts from the white belly and yellow neck that they have. Despite having wings, it is flightless, but can swim extremely well in the frigid antarctic waters. Its diet mostly consists of fish and other small sea creatures it can find, and is the only penguin species to breed during the antarctic winter.</p>
+          <p>The <em>Aptenodytes Forsteri</em>, commonly known as the Emperor Penguin, is the largest of all penguin species and lives solely in Antarctica. The sides of the creature are black, along with the back and the head. This sharply contrasts from the white belly and yellow neck that they have. Despite having wings, it is flightless, but can swim extremely well in the frigid antarctic waters. Its diet mostly consists of fish and other small sea creatures it can find, and is the only penguin species to breed during the antarctic winter. They live on the Antarctica coasts in order to find food in the water, but have to venture inland for mating.</p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/emperorpenguins.jpg" height="300px">
-          <img src="./images/emperorpenguins2.jpg" height="300px">
+          <img src="./images/emperorpenguins.jpg" height="250px">
+          <img src="./images/penguinhabitat.jpg" height="280">
         </div>
       </div>
       <hr/>
