Finished info in behavior.html and added images

--- a/behavior.html
+++ b/behavior.html
@@ -46,14 +46,48 @@
       <h2 class="SectionTitle" style="padding-top:70px;">Colonies</h2>
       <div style="display: flex;">
         <div class="infopara" style="width: 60%; float: left;">
-          <p>The <em>Aptenodytes Forsteri</em>, commonly known as the Emperor Penguin, is the largest of all penguin species and lives solely in Antarctica. The sides of the creature are black, along with the back and the head. This sharply contrasts from the white belly and yellow neck that they have. Despite having wings, it is flightless, but can swim extremely well in the frigid antarctic waters. Its diet mostly consists of fish and other small sea creatures it can find, and is the only penguin species to breed during the antarctic winter. They live on the Antarctica coasts in order to find food in the water, but have to venture inland for mating.</p>
+          <p>The emperor penguin is an animal that lives in social colonies for nesting and feeding. An adult emperor penguin spends much of its time traveling between the breeding colony and the feeding grounds. In their colonies, the emperor penguins form a compact huddle of often several hundred penguins in order to keep warm. Typically the juveniles are found in the center of the huddleand the other penguins rotate, ensuring that each penguin has a chance to be in the inside or outside of the huddle.</p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/emperorpenguins.jpg" height="250px">
-          <img src="./images/penguinhabitat.jpg" height="280">
+          <img src="./images/penguinhuddle.jpg" height="225">
         </div>
       </div>
       <hr/>
+      <h2 class="SectionTitle" style="padding-top:70px;">Predators and Prey</h2>
+      <div style="display: flex;">
+        <div class="infopara" style="width: 60%; float: left;">
+          <p>The emperor penguin has several main predators, including birds and marine creatures. The Southern Giant Petrel is responsible for 1/3 of all hatchling deaths, and sometimes scavenge dead chicks. The two main adult predators are the leapord seal and orcas, both of which attack penguins in the water.</p>
+          <p>The diet of the emperor penguin is mainly fish, crustaceans, and cephalopods. The main part of their diet is comprised of Antarctic Sliverfish, although they also eat cod icefish often. In addition. they often eat species of squid incuding the Glacial Squid, and Hooked Squids in addition to the krill in the water. The penguin searches for prey in the open waters of the ocean, or in various lakes bounded by ice. They dive to about 150 meters into the ocean to find fish living near the sea bottom, and repeat this a few times before coming up for air. </p>
+        </div>
+        <div class="bodyother" style="float: right;">
+          <img src="./images/penguinorca.jpg" height="180">
+          <img src="./images/penguindiving.jpeg" height="250">
+        </div>
+      </div>
+      <hr/>
+      <h2 class="SectionTitle" style="padding-top:70px;">Mating and Breeding</h2>
+      <div style="display: flex;">
+        <div class="infopara" style="width: 60%; float: left;">
+          <p>The process by which emperor penguins mate and incubate their eggs is extremely strenuous and only 19% of chicks survive their first year of life. It involves several long trips from the hunting grounds back to the breeding grounds to get food, constant watch in incubating the egg, lest it drop or crack.</p>
+          <p></br></p>
+          <ol>
+            <li>January - March: Feeding at the ocean</li>
+            <li>April: Walk up to 150km to reach mating sites</li>
+            <li>May: The penguins start courtship and mating</li>
+            <li>June - July: The male penguin incubates the egg while the female goes to hunt</li>
+            <li>August: The penguin chicks hatch and females return with food</li>
+            <li>September: The chick is given the food by the female and the male leaves to go hunt</li>
+            <li>October - November: Chicks start to form groups to stay warm and are no longer completely dependent on parents</li>
+            <li>December: The parents leave the chicks</li>
+          </ol>
+        </div>
+        <div class="bodyother" style="float: right;">
+          <img src="./images/penguinbreeding.jpg" height="300">
+          <img src="./images/penguinegg.jpg" height="300">
+        </div>
+      </div>
+      <hr/>
+    </div>
 
     <div class="foot">
       <div class="foottop">
