finished info in other.html and added images

--- a/other.html
+++ b/other.html
@@ -43,14 +43,35 @@
     </div>
 
     <div class="mainbody">
-      <h2 class="SectionTitle" style="padding-top:70px;">Overview</h2>
+      <h2 class="SectionTitle" style="padding-top:70px;">Modern Culture</h2>
       <div style="display: flex;">
         <div class="infopara" style="width: 60%; float: left;">
-          <p>The <em>Aptenodytes Forsteri</em>, commonly known as the Emperor Penguin, is the largest of all penguin species and lives solely in Antarctica. The sides of the creature are black, along with the back and the head. This sharply contrasts from the white belly and yellow neck that they have. Despite having wings, it is flightless, but can swim extremely well in the frigid antarctic waters. Its diet mostly consists of fish and other small sea creatures it can find, and is the only penguin species to breed during the antarctic winter. They live on the Antarctica coasts in order to find food in the water, but have to venture inland for mating.</p>
+          <p>Emperor penguins have been the subject of many recent cultural phenomenon, including movies, music, and art. In 2006, the movie <em>"Happy Feet"</em> was produced which featured emperor penguins, in particular, one that loves to dance. Although this movie was tailored towards younger audiences, it promoted the theme of helping to stop climate change to prevent species from becoming extinct. In addition, the movie provided a lot of correct factual information about emperor penguins, focusing on their life cycle.</p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/emperorpenguins.jpg" height="250px">
-          <img src="./images/penguinhabitat.jpg" height="280">
+          <img src="./images/happyfeet.jpg" height="275px">
+          <img src="./images/penguindance.jpg" height="275px;">
+        </div>
+      </div>
+      <h2 class="SectionTitle" style="padding-top:70px;">Other Sources</h2>
+      <div style="display: flex;">
+        <div class="infopara" style="width: 60%; float: left;">
+
+          <a href="https://www.britannica.com/animal/emperor-penguin" target="_blank"><h3>Encyclopædia Britannica | Emperor Penguin</h3></a>
+
+          <a href="https://www.biologicaldiversity.org/species/birds/penguins/emperor_penguin.html" target="_blank"><h3></br>Center for Biological Diversity | Emperor Penguin</h3></a>
+
+          <a href="http://www.penguinworld.com/types/emperor.html" target="_blank"><h3></br>PenguinWorld | Emperor Penguin</h3></a>
+
+        </div>
+        <div class="bodyother" style="float: right; padding-top:50px; padding-bottom:50px;">
+
+          <a href="https://www.nationalgeographic.com/animals/birds/e/emperor-penguin/" target="_blank"><h3>National Geographic | Emperor Penguin</h3></a>
+
+          <a href="http://www.iucnredlist.org/details/22697752/0" target="_blank"><h3></br>IUCN Redlist | Emperor Penguin</h3></a>
+
+          <a href="http://marinebio.org/species.asp?id=534" target="_blank"><h3></br>MarineBio | Emperor Penguin</h3></a>
+
         </div>
       </div>
       <hr/>
