--- a/behavior.html
+++ b/behavior.html
@@ -52,6 +52,70 @@
           <img src="./images/penguinhuddle.jpg" height="225">
         </div>
       </div>
+      <div style="width: 60%; padding: 20px; padding-left: 50px;">
+        <h3>Emperor Penguin Colonies in Antarctica</h3>
+        <table>
+          <thead>
+            <tr>
+              <th>Colony Name</th>
+              <th>Colony Area (m<sup>2</sup>)</th>
+              <th>Estimated Population</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Cape Colbeck</td>
+              <td>~12300</td>
+              <td>~11400</td>
+            </tr>
+            <tr>
+              <td>Rupert Coast</td>
+              <td>~1700</td>
+              <td>~1500</td>
+            </tr>
+            <tr>
+              <td>Thuston Glacier, Mt Siple</td>
+              <td>~3200</td>
+              <td>~3000</td>
+            </tr>
+            <tr>
+              <td>Snowhill</td>
+              <td>~2300</td>
+              <td>~2200</td>
+            </tr>
+            <tr>
+              <td>Gould</td>
+              <td>~8800</td>
+              <td>~8200</td>
+            </tr>
+            <tr>
+              <td>Dawson</td>
+              <td>~2700</td>
+              <td>~2600</td>
+            </tr>
+            <tr>
+              <td>Halley</td>
+              <td>~24100</td>
+              <td>~23500</td>
+            </tr>
+            <tr>
+              <td>Atka</td>
+              <td>~10400</td>
+              <td>~9700</td>
+            </tr>
+            <tr>
+              <td>Dibble Glacier</td>
+              <td>~13400</td>
+              <td>~12500</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td colspan="3">This information was taken from research conducted by Peter T. Fretwell et al. in 2012 from pictures of penguin colonies taken from space in 2009. This information does not cover all existing penguin colonies and is not an accurate depiction of the present penguin population.</td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
       <hr/>
       <h2 class="SectionTitle" style="padding-top:70px;">Predators and Prey</h2>
       <div style="display: flex;">
