added table borders

--- a/behavior.html
+++ b/behavior.html
@@ -54,64 +54,64 @@
       </div>
       <div style="width: 60%; padding: 20px; padding-left: 50px;">
         <h3>Emperor Penguin Colonies in Antarctica</h3>
-        <table>
+        <table class="tab">
           <thead>
             <tr>
-              <th>Colony Name</th>
-              <th>Colony Area (m<sup>2</sup>)</th>
-              <th>Estimated Population</th>
+              <th class="tabh">Colony Name</th>
+              <th class="tabh">Colony Area (m<sup>2</sup>)</th>
+              <th class="tabh">Estimated Population</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Cape Colbeck</td>
-              <td>~12300</td>
-              <td>~11400</td>
+              <td class="tabd">Cape Colbeck</td>
+              <td class="tabd">~12300</td>
+              <td class="tabd">~11400</td>
             </tr>
             <tr>
-              <td>Rupert Coast</td>
-              <td>~1700</td>
-              <td>~1500</td>
+              <td class="tabd">Rupert Coast</td>
+              <td class="tabd">~1700</td>
+              <td class="tabd">~1500</td>
             </tr>
             <tr>
-              <td>Thuston Glacier, Mt Siple</td>
-              <td>~3200</td>
-              <td>~3000</td>
+              <td class="tabd">Thuston Glacier, Mt Siple</td>
+              <td class="tabd">~3200</td>
+              <td class="tabd">~3000</td>
             </tr>
             <tr>
-              <td>Snowhill</td>
-              <td>~2300</td>
-              <td>~2200</td>
+              <td class="tabd">Snowhill</td>
+              <td class="tabd">~2300</td>
+              <td class="tabd">~2200</td>
             </tr>
             <tr>
-              <td>Gould</td>
-              <td>~8800</td>
-              <td>~8200</td>
+              <td class="tabd">Gould</td>
+              <td class="tabd">~8800</td>
+              <td class="tabd">~8200</td>
             </tr>
             <tr>
-              <td>Dawson</td>
-              <td>~2700</td>
-              <td>~2600</td>
+              <td class="tabd">Dawson</td>
+              <td class="tabd">~2700</td>
+              <td class="tabd">~2600</td>
             </tr>
             <tr>
-              <td>Halley</td>
-              <td>~24100</td>
-              <td>~23500</td>
+              <td class="tabd">Halley</td>
+              <td class="tabd">~24100</td>
+              <td class="tabd">~23500</td>
             </tr>
             <tr>
-              <td>Atka</td>
-              <td>~10400</td>
-              <td>~9700</td>
+              <td class="tabd">Atka</td>
+              <td class="tabd">~10400</td>
+              <td class="tabd">~9700</td>
             </tr>
             <tr>
-              <td>Dibble Glacier</td>
-              <td>~13400</td>
-              <td>~12500</td>
+              <td class="tabd">Dibble Glacier</td>
+              <td class="tabd">~13400</td>
+              <td class="tabd">~12500</td>
             </tr>
           </tbody>
           <tfoot>
             <tr>
-              <td colspan="3">This information was taken from research conducted by Peter T. Fretwell et al. in 2012 from pictures of penguin colonies taken from space in 2009. This information does not cover all existing penguin colonies and is not an accurate depiction of the present penguin population.</td>
+              <td  class="tabd" colspan="3" style="text-align:left;">This information was taken from research conducted by Peter T. Fretwell et al. in 2012 from pictures of penguin colonies taken from space in 2009. This information does not cover all existing penguin colonies and is not an accurate depiction of the present penguin population.</td>
             </tr>
           </tfoot>
         </table>
