added copyright symbol

--- a/humans.html
+++ b/humans.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <title>Emperor Penguins</title>
+    <title>Emperor Penguins - Human Interaction</title>
     <style></style>
     <link rel="stylesheet" type="text/css" href="./css/headstyle.css">
     <link rel="stylesheet" type="text/css" href="./css/bodystyle.css">
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="footbottom">
-        <p style="float:left; margin-right:45%">Copyright 2018</p>
+        <p style="float:left; margin-right:50%">© 2018</p>
         <p style="float:right;">AIT - UCVTS | APCSP</p>
       </div>
     </div>
