added hyperlinks for school and email

--- a/other.html
+++ b/other.html
@@ -89,14 +89,14 @@
             <ul>
               <li>John Doe</li>
               <li>(123) 456 - 7890</li>
-              <li>info@example.com</li>
+              <a class="footlink" target="_blank" href="mailto:info@example.com"> <li>info@example.com</li></a>
             </ul>
           </div>
         </div>
       </div>
       <div class="footbottom">
         <p style="float:left; margin-right:50%">© 2018</p>
-        <p style="float:right;">AIT - UCVTS | APCSP</p>
+        <p style="float:right;"><a class="footlink" href="https://www.ucvts.tec.nj.us/domain/16" target="_blank"> AIT - UCVTS</a> | APCSP</p>
       </div>
     </div>
 
