added css img dimensions

--- a/behavior.html
+++ b/behavior.html
@@ -18,9 +18,9 @@
         <h3 class="subtitle">"It's practically impossible to look at a penguin and feel angry." <br> - Joe Moore</h3>
       </div>
       <div class="headerimg">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
       </div>
     </div>
 
@@ -49,7 +49,7 @@
           <p>The emperor penguin is an animal that lives in social colonies for nesting and feeding. An adult emperor penguin spends much of its time traveling between the breeding colony and the feeding grounds. In their colonies, the emperor penguins form a compact huddle of often several hundred penguins in order to keep warm. Typically the juveniles are found in the center of the huddleand the other penguins rotate, ensuring that each penguin has a chance to be in the inside or outside of the huddle.</p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/penguinhuddle.jpg" height="225">
+          <img src="./images/penguinhuddle.jpg">
         </div>
       </div>
       <div style="width: 60%; padding: 20px; padding-left: 50px;">
@@ -124,8 +124,8 @@
           <p>The diet of the emperor penguin is mainly fish, crustaceans, and cephalopods. The main part of their diet is comprised of Antarctic Sliverfish, although they also eat cod icefish often. In addition. they often eat species of squid incuding the Glacial Squid, and Hooked Squids in addition to the krill in the water. The penguin searches for prey in the open waters of the ocean, or in various lakes bounded by ice. They dive to about 150 meters into the ocean to find fish living near the sea bottom, and repeat this a few times before coming up for air. </p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/penguinorca.jpg" height="180">
-          <img src="./images/penguindiving.jpeg" height="250">
+          <img src="./images/penguinorca.jpg">
+          <img src="./images/penguindiving.jpeg">
         </div>
       </div>
       <hr/>
@@ -146,8 +146,8 @@
           </ol>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/penguinbreeding.jpg" height="300">
-          <img src="./images/penguinegg.jpg" height="300">
+          <img src="./images/penguinbreeding.jpg">
+          <img src="./images/penguinegg.jpg">
         </div>
       </div>
       <hr/>
