--- a/humans.html
+++ b/humans.html
@@ -18,9 +18,9 @@
         <h3 class="subtitle">"It's practically impossible to look at a penguin and feel angry." <br> - Joe Moore</h3>
       </div>
       <div class="headerimg">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
       </div>
     </div>
 
@@ -49,7 +49,7 @@
           <p>Due to the fact that the emperor penguin is considered a flagship species, there have been numerous attempts to breed them in zoos and aquariums. It was first successfully bred in the SeaWorld at San Diego in 1980, and since then many individuals have been born in captivity across the world.</p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/penguinseaworld.jpg" height="250px">
+          <img src="./images/penguinseaworld.jpg">
         </div>
       </div>
       <hr/>
@@ -59,7 +59,7 @@
           <p>Due to many factors, emperor penguins are slowly decreasing in population and are currently ranked Near Threatened by the IUCN, with a population of about 600,000. The primary cause of this is climate change, which decreases their source of food. This reduces the population of fish and crustaceans in the area, which reduces the supply food to the emperor penguins. Other factos in their decreasing population are disease, habitat destruction, and disturbance by humans. In general emperor penguins are considered highly sensitive to climate changes; the smallest warming could reduce ice coverage of the sea, while the extensive sea ice coverage could prevent access to food. A study by the Woods Hole Oceanographic Institution in 2009 calculated that by 2100, the emperor penguins could be nearly extinct at the current rate of population decrease. </p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/penguinextinction.jpg" height="350px">
+          <img src="./images/penguinextinction.jpg">
         </div>
       </div>
     </div>
