--- a/other.html
+++ b/other.html
@@ -18,9 +18,9 @@
         <h3 class="subtitle">"It's practically impossible to look at a penguin and feel angry." <br> - Joe Moore</h3>
       </div>
       <div class="headerimg">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
       </div>
     </div>
 
@@ -49,8 +49,8 @@
           <p>Emperor penguins have been the subject of many recent cultural phenomenon, including movies, music, and art. In 2006, the movie <em>"Happy Feet"</em> was produced which featured emperor penguins, in particular, one that loves to dance. Although this movie was tailored towards younger audiences, it promoted the theme of helping to stop climate change to prevent species from becoming extinct. In addition, the movie provided a lot of correct factual information about emperor penguins, focusing on their life cycle.</p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/happyfeet.jpg" height="275px">
-          <img src="./images/penguindance.jpg" height="275px;">
+          <img src="./images/happyfeet.jpg">
+          <img src="./images/penguindance.jpg">
         </div>
       </div>
       <hr/>
